--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -15,7 +15,7 @@
 @import '~jquery-ui/themes/base/all.css';
 
 // gridstack
-@import '~gridstack/dist/gridstack.css';
+// @import '~gridstack/dist/gridstack.css';
 
 // @import 'navbar';
 // @import 'dashboard';
@@ -26,11 +26,15 @@
 // @import 'items';
 
 
-
+html, body, .dashboard, main {
+  margin: 0;
+  background-color: $lightblue;
+  height: 100%;
+}
 
 
 .navbar-laravel {
-  background-color: #fff;
+
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
@@ -55,7 +59,7 @@
 
 .auction-new {
 
-  background-color: $background;
+
 
   .topbar {
 
@@ -142,7 +146,7 @@
 
     .control-container {
 
-
+        cursor: grab;
 
       .control-item {
 
@@ -211,13 +215,13 @@
     }
 
     .previous-bids {
-
+      cursor:grab;
       .bid-list {
-        max-height: 125px;
+        max-height: 105px;
         overflow: scroll;
 
       }
-      td {
+      td,th {
         line-height: 8px;
         font-size: 1.0em;
         padding: 8px;
@@ -240,8 +244,12 @@
       padding: 0px;
     }
     .widget {
+      
+      .add-item-button {
+        background-color: $darkblue;
+      }
       .widget-container {
-        border-radius: 4px;
+        border-radius: 8px;
         overflow: scroll;
         .widget-header {
           h3{
@@ -259,10 +267,6 @@
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12);
           background-color: #fff;
       }
-
-
-
-
 
       .chat-widget {
         padding: 25px;
@@ -304,14 +308,22 @@
 
       .bidders-overview {
 
+
+        overflow: hidden;
+
         a:hover{ text-decoration: none;}
         background-color: #143753;
         width: 100%;
-        height: 100%;
+        min-height: 100%;
         border-radius: 4px;
         padding: 10px;
         // border: 1px solid #707070;
-        h3 {color: #fff; font-size: 16px; font-weight: bold;}
+        h3 {
+          color: #fff;
+          font-size: 16px;
+          font-weight: bold;
+          cursor: grab;
+        }
         .bidder-card {
           background-color: #fff;
           width: 100%;
