--- a/public/css/summary.css
+++ b/public/css/summary.css
@@ -14972,387 +14972,12 @@ a.text-dark:focus {
   clip: auto;
 }
 
-.chat-widget button {
-  border-radius: 16px;
-  width: 78px;
-  height: 22px;
-  padding: 0px;
-  font-size: 14px;
-  color: #143753;
-  font-weight: bold;
-  background-color: #fff;
-  margin-left: 15px;
-  margin-right: 15px;
-}
-
-.chat-widget .chat {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.chat-widget .chat li {
-  margin-bottom: 10px;
-  padding-bottom: 5px;
-  border-bottom: 1px dotted #B3A9A9;
-}
-
-.chat-widget .chat li .chat-body p {
-  margin: 0;
-  color: #777777;
-}
-
-.chat-widget .panel-body {
-  overflow-y: scroll;
-  height: 225px;
-}
-
-.chat-widget .input-group {
-  margin: 5px;
-}
-
-.chat-widget .input-group label {
-  padding: 10px;
-}
-
 .summary {
   color: #000;
 }
 
-.navbar-laravel {
-  -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
-
-.blinking {
-  -webkit-animation: blinker 0.35s linear infinite;
-          animation: blinker 0.35s linear infinite;
-}
-
-@-webkit-keyframes blinker {
-  50% {
-    opacity: 0;
-  }
-}
-
-@keyframes blinker {
-  50% {
-    opacity: 0;
-  }
-}
-
-.auction-new {
-  margin: 0;
-  padding-bottom: 25px;
-  background-color: #2196f3;
-}
-
-.auction-new .topbar {
-  width: 100%;
-  background-color: #143753;
-}
-
-.auction-new .topbar .topbar-container {
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.auction-new .topbar .topbar-item {
-  padding: 0px;
-  text-align: center;
-  line-height: 55px;
-  color: white;
-  font-size: 1.0em;
-}
-
-.auction-new .topbar .logo-container {
-  width: 100%;
-  background-color: #fff;
-}
-
-.auction-new .topbar .logo-container img.logo {
-  width: 105px;
+.summary input[type="number"].bid-amount {
+  width: 55px;
   height: auto;
-}
-
-.auction-new .topbar .logo-container a {
-  color: #143753;
-}
-
-.auction-new .topbar .info-container {
-  text-align: left;
-  padding-left: 15px;
-}
-
-.auction-new .topbar .info-container a {
-  color: #fff;
-  padding: 0px;
-}
-
-.auction-new .topbar .info-container .dropdown-menu .dropdown-item {
-  line-height: 1.5;
-}
-
-.auction-new .topbar .info-container .dropdown-menu a {
-  color: #143753;
-  padding-left: 10px;
-}
-
-.auction-new .topbar .info-container .dropdown-menu a:hover {
-  background-color: #fe5722;
-}
-
-.auction-new .controlbar {
-  overflow: hidden;
-  background-color: #fe5722;
-  color: #fff;
-  width: 100%;
-}
-
-.auction-new .controlbar th,
-.auction-new .controlbar td {
-  border-top: 0;
-  padding: 5px;
-  line-height: normal;
-}
-
-.auction-new .controlbar .control-container-wrapper {
-  margin-left: auto;
-  margin-right: auto;
-  padding: 15px;
-}
-
-.auction-new .controlbar .control-container {
-  cursor: -webkit-grab;
-  cursor: grab;
-}
-
-.auction-new .controlbar .control-container .control-item {
-  padding: 5px;
-  line-height: 12px;
-  color: white;
-  font-size: 1.25em;
-  font-weight: bold;
-}
-
-.auction-new .controlbar .control-container .control-item .control {
-  background-color: #fe5722;
-}
-
-.auction-new .controlbar .control-container .control-item .control .bidding-controls input[type=number] {
-  position: relative;
-  bottom: 1.0px;
-}
-
-.auction-new .controlbar .control-container .control-item .control .bidding-controls input[type=number],
-.auction-new .controlbar .control-container .control-item .control .bidding-controls button.bid-button {
-  font-size: 14px;
-  color: #143753;
-  font-weight: bold;
-  background-color: #fff;
-  padding: 0px;
-  width: 68px;
-  height: 22px;
-  text-align: center;
-  border-radius: 16px;
-  margin-bottom: 0px;
-  border: 1px;
-}
-
-@media only screen and (max-width: 767px) {
-  .auction-new .controlbar .control-container .control-item .control .bidding-controls input[type=number] {
-    position: relative;
-    bottom: -2px;
-  }
-
-  .auction-new .controlbar .control-container .control-item .control .bidding-controls input[type=number],
-  .auction-new .controlbar .control-container .control-item .control .bidding-controls button.bid-button {
-    font-size: 24px;
-    width: 75px;
-    height: 58px;
-    display: inline-block;
-  }
-}
-
-.auction-new .controlbar .previous-bids {
-  cursor: -webkit-grab;
-  cursor: grab;
-}
-
-.auction-new .controlbar .previous-bids .bid-list {
-  max-height: 105px;
-  overflow: scroll;
-}
-
-.auction-new .controlbar .previous-bids td,
-.auction-new .controlbar .previous-bids th {
-  line-height: 8px;
-  font-size: 1.0em;
-  padding: 8px;
-  border-top: 0px;
-}
-
-.auction-new ::-webkit-scrollbar {
-  display: none;
-}
-
-.auction-new .widgets .main-content,
-.auction-new .widgets .sidebar {
-  padding: 0px;
-}
-
-.auction-new .widgets .widget .add-item-button {
-  background-color: #143753;
-}
-
-.auction-new .widgets .widget .widget-container {
-  border-radius: 8px;
-  overflow: hidden;
-  background-color: #fff;
-  -webkit-box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.12);
-          box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.12);
-}
-
-.auction-new .widgets .widget .widget-container .widget-header {
-  border-radius: 4px 4px 0px 0px;
-  width: 100%;
-  background-color: #143753;
-  color: #fff;
-  cursor: -webkit-grab;
-  cursor: grab;
-}
-
-.auction-new .widgets .widget .widget-container .widget-header h3 {
-  font-size: 1.0em;
-  line-height: 15px;
-  font-weight: bold;
-}
-
-.auction-new .widgets .widget .widget-container .widget-body {
-  height: 100%;
-  min-height: 265px;
-  overflow: scroll;
-}
-
-.auction-new .widgets .widget .chat-widget {
-  padding: 25px;
-}
-
-.auction-new .widgets .widget .chat-widget button {
-  border-radius: 16px;
-  width: 78px;
-  height: 22px;
-  padding: 0px;
-  font-size: 14px;
-  color: #143753;
-  font-weight: bold;
-  background-color: #fff;
-  margin-left: 15px;
-  margin-right: 15px;
-}
-
-.auction-new .widgets .widget .chat-widget .chat {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.auction-new .widgets .widget .chat-widget .chat li {
-  margin-bottom: 10px;
-  padding-bottom: 5px;
-  border-bottom: 1px dotted #B3A9A9;
-}
-
-.auction-new .widgets .widget .chat-widget .chat li .chat-body p {
-  margin: 0;
-  color: #777777;
-}
-
-.auction-new .widgets .widget .chat-widget .panel-body {
-  overflow-y: scroll;
-  height: 225px;
-}
-
-.auction-new .widgets .widget .chat-widget .input-group {
-  margin: 5px;
-}
-
-.auction-new .widgets .widget .chat-widget .input-group label {
-  padding: 10px;
-}
-
-.auction-new .widgets .widget .bidders-overview {
-  overflow: hidden;
-  background-color: #143753;
-  width: 100%;
-  min-height: 100%;
-  border-radius: 4px;
-  padding: 10px;
-}
-
-.auction-new .widgets .widget .bidders-overview a:hover {
-  text-decoration: none;
-}
-
-.auction-new .widgets .widget .bidders-overview h3 {
-  color: #fff;
-  font-size: 16px;
-  font-weight: bold;
-  cursor: -webkit-grab;
-  cursor: grab;
-}
-
-.auction-new .widgets .widget .bidders-overview .bidder-card {
-  background-color: #fff;
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #707070;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.auction-new .widgets .widget .bidders-overview tr.bidder-card {
-  border-top: 10px solid #143753;
-  border-bottom: 10px solid #143753;
-}
-
-.auction-new .widgets .widget .bidders-overview .isUser {
-  background-color: #fe5722;
-}
-
-.auction-new .widgets .widget .bidders-overview td {
-  cursor: pointer;
-}
-
-.auction-new .widgets .widget .bidders-overview p,
-.auction-new .widgets .widget .bidders-overview span,
-.auction-new .widgets .widget .bidders-overview strong,
-.auction-new .widgets .widget .bidders-overview th {
-  color: #143753;
-  margin: 0px;
-}
-
-.auction-new .widgets .widget .bidders-overview .players-needed {
-  color: #ff5722;
-}
-
-.auction-new .widgets .widget .bidders-overview-details.widget-card {
-  width: 100%;
-  position: absolute;
-  right: 100%;
-  top: 0%;
-  -webkit-box-shadow: 2px 0px 2px 4px rgba(0, 0, 0, 0.44);
-          box-shadow: 2px 0px 2px 4px rgba(0, 0, 0, 0.44);
 }
 
